CRT spacing fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@
 
     --clr-primary:              hsl(205, 10%, 100%);
     --clr-primary-dk:           hsl(205, 10%, 95%);
+    --clr-primary-dk-crt:       hsl(200, 10%, 95%);
 
     --clr-secondary:            hsl(205, 10%, 100%);
     --clr-secondary-tl:         hsla(205, 10%, 100%, 0.8);
@@ -27,7 +28,7 @@
     --section-margin:           2em;
     --border-radius:            0.5em;
     --second-per-char:          10ms;
-    --crt-hr:                   180deg;
+    --crt-hr:                   150deg;
     --crt-s:                    0;
     --crt-b:                    1;
     --crt-gs:                   0%;
@@ -44,23 +45,17 @@
 
         --clr-primary:              hsl(205, 10%, 20%);
         --clr-primary-dk:           hsl(205, 10%, 25%);
+        --clr-primary-dk-crt:       hsl(200, 10%, 27%);
 
         --clr-secondary:            hsl(205, 10%, 15%);
         --clr-secondary-tl:         hsla(205, 10%, 8%, 0.8);
 
         --clr-mask-dk:              hsla(0, 0%, 100%, 0.1);
         --clr-mask-dkr:             hsla(0, 0%, 100%, 0.2);
-
-        --crt-s:                    1.5;
-        --crt-b:                    0.15;
+        --crt-s:                    1.3;
+        --crt-b:                    0.20;
         /* … */
     }
-    /* … */
-}
-
-* {
-    /*
-    box-shadow: 0 0 3px 1px var(--clr-accent);
     /* … */
 }
 
@@ -133,6 +128,11 @@ section {
     margin: var(--section-margin) 0;
     position: relative;
     /* … */
+}
+
+#index {
+    background-color: var(--clr-primary-dk-crt);
+    box-shadow: 0 0 3px 1px var(--clr-primary);
 }
 
 article {
@@ -257,6 +257,8 @@ input[type=submit]:active {
     color: var(--clr-accent);
     border-radius: var(--border-radius);
     display: flex;
+    box-sizing: border-box;
+    padding: 4% 10% 5%;
     height: 100%;
     justify-content: center;
     position: absolute;
@@ -335,9 +337,10 @@ nav.top-nav a:active {
         blinking 1s step-end calc(var(--char) * var(--second-per-char)) var(--num-blink);
     animation-delay: calc(var(--delay-char) * var(--second-per-char));
     border-right: .15em solid transparent;
+    font-size: min(2.3vw, 28px);
     overflow: hidden;
     white-space: pre;
-    margin: 0 0 0 2ch;
+    margin: 0;
     /* … */
 }
 
